# mononym

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: demo.md  exists_macro.md  implementation.md  proof_macro.md
examples/: access_control.rs  data_structures.rs  list.rs  more_than_half.rs  number.rs  sort.rs
src/: lib.rs  macros.rs
src/named/: internal.rs  mod.rs
src/proof/: equal.rs
